@@ -1,3 +1,7 @@
+2010-12-14  Richard Henderson  <rth@redhat.com>
+
+	* config/x86/tls.h: New file.
+
 2010-07-15  Richard Henderson  <rth@redhat.com>
 
 	* Makefile.am (AM_CXXFLAGS): Add -funwind-tables.
